--- a/section23/smartbrain/package.json
+++ b/section23/smartbrain/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-particles-js": "^3.6.0",
     "react-scripts": "5.0.1",
     "react-tilt": "^0.1.4",
+    "react-tsparticles": "^2.0.6",
     "tachyons": "^4.12.0",
+    "tsparticles": "^1.43.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
