--- a/smartbrain/smartbrain-api/package.json
+++ b/smartbrain/smartbrain-api/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "express": "^4.18.1",
     "nodemon": "^2.0.19"
   }
