need to create a repo for smartbrain only.

--- a/smartbrain/smartbrain-api/package.json
+++ b/smartbrain/smartbrain-api/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
-  },
+     "start": "node server.js",
+     "start:dev": "nodemon server.js"
+     .....    
+   },
   "keywords": [],
   "author": "",
   "license": "ISC",
