--- a/smartbrain/package.json
+++ b/smartbrain/package.json
@@ -1,5 +1,11 @@
 {
   "devDependencies": {
     "cross-env": "^7.0.3"
-  }
+  },
+  "scripts": {
+     "start": "node server.js",
+     "start:dev": "nodemon server.js"
+   }
 }
+
+//testing git
